--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         />
 
     <EditText
+        android:id="@+id/edKg"
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:clickable="true"
@@ -44,6 +45,7 @@
         >
 
         <EditText
+            android:id="@+id/edFit"
             android:layout_width = "wrap_content"
             android:layout_height = "wrap_content"
             android:clickable="true"
@@ -55,6 +57,7 @@
             />
 
     <EditText
+        android:id="@+id/edIn"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:clickable="true"
@@ -68,6 +71,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/bmiAns"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:text="BMI দেখুন"
@@ -76,6 +80,7 @@
         />
 
     <TextView
+        android:id="@+id/tvDisplay"
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:text=""
